--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>0xchat⚡️ - Secure chat built on Nostr</title>
-    <meta name="description" content="0xchat is a secure chat app built on the Nostr protocol. It prioritizes security, featuring private key login, encrypted private chats and contacts, encrypted group chats, and lightning payments." />
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>0xchat⚡️ - Secure Encrypted Chat App Built on Nostr Protocol</title>
+  <meta name="title" content="0xchat⚡️ - Secure Encrypted Chat App Built on Nostr Protocol" />
+  <meta name="description"
+    content="0xchat is a decentralized secure messaging app built on Nostr. Features end-to-end encrypted DMs, private groups, voice & video calls, Lightning payments, and Nostr channels. No phone number or email required - just your private key for complete privacy." />
+  <meta name="keywords"
+    content="0xchat, nostr chat, encrypted messaging, decentralized chat, private messaging, nostr protocol, end-to-end encryption, lightning payments, secure chat app, privacy chat, bitcoin messaging, nostr messenger, encrypted group chat, voice calls, video calls, nostr channels, decentralized communication, peer-to-peer chat, cryptocurrency chat, anonymous messaging, zero-knowledge chat" />
+  <meta name="author" content="0xchat" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://0xchat.com/" />
+  <meta property="og:title" content="0xchat⚡️ - Secure Encrypted Chat App Built on Nostr Protocol" />
+  <meta property="og:description"
+    content="Decentralized secure messaging on Nostr. End-to-end encrypted DMs, private groups, voice & video calls, and Lightning payments. No registration required." />
+  <meta property="og:site_name" content="0xchat" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://0xchat.com/" />
+  <meta name="twitter:title" content="0xchat⚡️ - Secure Encrypted Chat App Built on Nostr" />
+  <meta name="twitter:description"
+    content="Decentralized secure messaging on Nostr. End-to-end encrypted DMs, private groups, voice & video calls, and Lightning payments. No registration required." />
+
+  <!-- Additional SEO -->
+  <meta name="theme-color" content="#fde047" />
+  <link rel="canonical" href="https://0xchat.com/" />
+
+  <!-- App-specific -->
+  <meta name="application-name" content="0xchat" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="0xchat" />
+  <meta name="mobile-web-app-capable" content="yes" />
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
