1. Use the theme color 2. Optimize some of the copy/text

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>0xchat⚡️ - Secure Encrypted Chat App Built on Nostr Protocol</title>
-  <meta name="title" content="0xchat⚡️ - Secure Encrypted Chat App Built on Nostr Protocol" />
+  <title>0xchat⚡️ - Secure Chat App Built on Nostr Protocol</title>
+  <meta name="title" content="0xchat⚡️ - Secure Chat App Built on Nostr Protocol" />
   <meta name="description"
     content="0xchat is a decentralized secure messaging app built on Nostr. Features end-to-end encrypted DMs, private groups, voice & video calls, Lightning payments, and Nostr channels. No phone number or email required - just your private key for complete privacy." />
   <meta name="keywords"
