--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
   <meta name="theme-color" content="#fde047" />
   <link rel="canonical" href="https://0xchat.com/" />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favi.png" />
+  <link rel="apple-touch-icon" href="/favi.png" />
+
   <!-- App-specific -->
   <meta name="application-name" content="0xchat" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
