--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="0xchat" />
   <meta name="mobile-web-app-capable" content="yes" />
+  
+  <!-- QR Code library - load before Vue app -->
+  <script src="/qrcode.min.js"></script>
 </head>
 
 <body>
